UserApp/src/main/java/com/example/UserApp/errors/PasswordMismatchException.java
package com.example.UserApp.errors;


public class PasswordMismatchException extends RuntimeException {

}
